<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp">

    <ImageView
        android:id="@+id/thumbnail_list_item"
        android:layout_width="64dp"
        android:layout_height="96dp"
        android:layout_gravity="center_vertical"
        android:src="@raw/default_pic"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/character_name_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="16sp"
            android:text="@string/character_name_list_item_sample"/>

        <TextView
            android:id="@+id/house_name_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:text="@string/house_name_list_item_sample"/>

        <TextView
            android:id="@+id/character_title_name_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:text="@string/character_title_list_item_sample"/>
    </LinearLayout>

</LinearLayout>